Fix date input and select on iOS

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,10 @@ input[type="date"] {
     -webkit-appearance: none;
 }
 
+select {
+    -webkit-appearance: none;
+}
+
 input[type="submit"] {
     display: block;
     width: 100%;
